--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,20 +4,28 @@
             <div class="card shadow">
                 <div class="card-body">
                     <div>Clientes Mayoristas</div>
-                    <strong style="font-size: 30px;">193</strong>
+                    <strong style="font-size: 30px;">{{ total_mayoristas }}</strong>
                 </div>
             </div>
         </div>
         <div class="col-4">
             <div class="card shadow">
                 <div class="card-body">
-                    <div>Clientes Finales</div>
-                    <strong style="font-size: 30px;">0</strong>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row my-4">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col">
+            <div class="card shadow">
+                <div class="card-body">
+                </div>
+            </div>
+        </div>
+        <div class="col"></div>
+    </div>
+    <!-- <div class="row my-4">
         <div class="col-8">
             <div class="card shadow">
                 <div class="card-body pb-0" #ContainerRef>
@@ -38,5 +46,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
